--- a/index.html
+++ b/index.html
@@ -50,27 +50,35 @@
     <title>Bar Hop UK</title>
   </head>
   <body>
-   
+    <!------------------------Navbar----------------------------->
 
     <nav class="navbar navbar-expand-lg nav-hop">
-      <a class="navbar-brand" href="index.html"> <div class="nav-bar-logo">
-      <div id="BarHop-log">
-        <img src="assets/images/Bar Hop UK (1).png" class="logo" alt="Bar-Hop-UK" />
-      </div>
-    </div></a>
+    <!------------------------Navbar-logo----------------------------->
+      <a href="index.html">
+        <div class="bar-hop-logo">
+          <div id="BarHop-logo">
+            <img
+              src="assets/images/Bar Hop UK (1).png"
+              class="logo bar-hop-logo"
+              alt="Bar-Hop-UK"
+            />
+          </div></div
+      ></a>
+
+      <a class="navbar-brand" href="#">Navbar</a>
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarText"
-        aria-controls="navbarText"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
             <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
@@ -80,30 +88,43 @@
             <a class="nav-link" href="#cities">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="test.html">Test</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#newsletter">Newsletter</a>
           </li>
+          <li class="nav-item">
+            <a
+              class="nav-link disabled"
+              href="#newsletter"
+              tabindex="-1"
+              aria-disabled="true"
+              >Newsletter</a
+            >
+          </li>
         </ul>
-        <span class="navbar-text">
-          Navbar text with an inline element
-        </span>
       </div>
     </nav>
+
     <div class="container-fluid landing-container">
       <div id="beertap-pic"></div>
     </div>
 
-    <h1 class="about-heading">About</h1>
+    <h1 class="about-heading">
+      <img
+        src="assets/images/Bar-Hop-UK.png"
+        class="logo about-logo"
+        alt="Bar Hop UK"
+      />About
+    </h1>
     <div class="about-container">
       <div class="row">
         <div class="col-md-6 offset-md-3 col-xs-4">
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit error
-            ipsa neque nulla quas possimus earum officiis ratione, consectetur
-            aperiam porro? Ratione deserunt dolor ex tempora perspiciatis autem
-            sed dicta.
+            Bar Hop UK, is your friend in the quest to find good beer in the UK.
+            we believe in good beer and we believe in supporting local buisness.
+            We give you the tools to find local breweries in your area or in
+            other areas you may wwant to visit. We also now that drinking alone
+            is not always what it is cracked to up to be and are offering
+            drinking tours around selected breweries. Allowing you to experience
+            local craft breweries and meet new people .
           </p>
         </div>
       </div>
@@ -113,18 +134,19 @@
       <div id="beer-bottles"></div>
     </div>
 
-    <h2 class="breweries-near-heading">Breweries Near You</h2>
-    <div class="container breweries-near-container">
+    <div class="container-fluid breweries-near-container">
+      <h2 class="breweries-near-heading">Breweries Near You</h2>
       <div class="row">
         <div class="col-12 col-md-8 d-flex">
           <p>
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis quas
-            aperiam dolorem quod? Aliquid odio quis, consequuntur suscipit
-            quibusdam minus doloribus ducimus ullam ad laborum distinctio quia
-            provident tempora obcaecati.
+            Breweries near you! Desighned to find the closest breweries near
+            your current location. Relying on geoloacation transmited through
+            your phone we can point you to the closest breweries and craft tap
+            tap rooms in your area.
           </p>
+          <div id="hop"></div>
         </div>
-        <div class="col-12 col-md-2">
+        <div class="col-12 col-md-4 d-flex">
           <div class="card card-breweries-near" style="width: 18rem;">
             <a href="breweries-near-you.html"
               ><img
@@ -159,7 +181,7 @@
             /></a>
             <div class="card card-body">
               <p class="card-text">
-                <a href="london.html">London</a>
+                <a href="london.html" target="_blank">London</a>
               </p>
             </div>
           </div>
@@ -176,7 +198,7 @@
             /></a>
             <div class="card-body">
               <p class="card-text">
-                <a href="manchester.html"> Manchester</a>
+                <a href="manchester.html" target="_blank"> Manchester</a>
               </p>
             </div>
           </div>
@@ -191,7 +213,7 @@
                 height="214px;"
             /></a>
             <div class="card-body">
-              <a href="liverpool.html">
+              <a href="liverpool.html" target="_blank">
                 <p class="card-text">
                   Liverpool
                 </p></a
@@ -204,26 +226,23 @@
 
     <!-- /.Modal ----------------------------------->
 
+    <!-- Button to Open the Modal -->
     <div class="container newsletter-container">
-      <a href="#signUpModal" data-toggle="modal"
+      <a href="#signUpModal" data-toggle="modal" data-target="#myModal"
         ><h3 class="newsletter">
           <i class="fas fa-newspaper"></i>Newsletter<i
             class="fas fa-newspaper"
           ></i></h3
       ></a>
     </div>
-    <div
-      class="modal fade"
-      id="signUpModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="signUpModalLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
+
+    <!-- The Modal -->
+    <div class="modal fade" id="myModal">
+      <div class="modal-dialog">
         <div class="modal-content">
+          <!-- Modal Header -->
           <div class="modal-header">
-            <h5 class="modal-title">Bar Hop Monthly</h5>
+            <h4 class="modal-title">Bar Hop Uk</h4>
             <button
               type="button"
               class="close"
@@ -233,62 +252,52 @@
               <span aria-hidden="true"><i class="fas fa-beer"></i></span>
             </button>
           </div>
+
+          <!-- Modal body -->
           <div class="modal-body">
-            <section class="container-fluid">
-              <div class="row-bg-color-contact">
-                <div class="col">
-                  <h3 class="contact-heading uppercase text-center">
-                    Sign up for our monthly newsletter!
-                  </h3>
-                  <h5 class="uppercase text-center">Lets drink together!</h5>
-                  <div class="center-form">
-                    <form onsubmit="return sendMail(this);">
-                      <input
-                        type="text"
-                        name="name"
-                        id="fullname"
-                        class="form-control"
-                        placeholder="Name"
-                        required
-                      />
-                      <input
-                        type="email"
-                        name="email"
-                        id="emailaddress"
-                        class="form-control"
-                        placeholder="Email"
-                        required
-                      />
-                      <textarea
-                        type="newsletter"
-                        name="newsletter"
-                        id="signup"
-                        class="form-control"
-                        placeholder="BEER"
-                        required
-                      ></textarea>
-                      <div class="form-row text-center">
-                        <div class="col">
-                          <button type="submit" class="btn btn-secondary">
-                            Send Project Request
-                          </button>
-                        </div>
-                      </div>
-                    </form>
+            <h3 class="contact-heading uppercase text-center">
+              Sign up for our monthly newsletter!
+            </h3>
+            <h5 class="uppercase text-center">Lets drink together!</h5>
+            <div class="center-form">
+              <form onsubmit="return sendMail(this);">
+                <input
+                  type="text"
+                  name="name"
+                  id="fullname"
+                  class="form-control"
+                  placeholder="Name"
+                  required
+                />
+                <input
+                  type="email"
+                  name="email"
+                  id="emailaddress"
+                  class="form-control"
+                  placeholder="Email"
+                  required
+                />
+
+                <!-- Modal footer -->
+
+                <div class="form-row text-center">
+                  <div class="col">
+                    <button type="submit" class="btn btn-signup btn-secondary">
+                      Sign Up!
+                    </button>
                   </div>
                 </div>
-              </div>
-            </section>
-          </div>
-          <div class="modal-footer">
-            <button
-              type="button"
-              class="btn btn-secondary"
-              data-dismiss="modal"
-            >
-              Close
-            </button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+                <div class="modal-footer">
+                  <button
+                    type="button"
+                    class="btn btn-danger"
+                    data-dismiss="modal"
+                  >
+                    Close
+                  </button>
+                </div>
+              </form>
+            </div>
           </div>
         </div>
       </div>
@@ -296,14 +305,14 @@
 
     <div class="container" id="newsletter">
       <div class="row">
-        <div class="col-6">
+        <div class="col col-6">
           <p>
             Sign up to our monthly newsletter so we can keep you in the know
             about everything that is beer. Bar Hop UK is free to use app with
             premium option that willl soon be available
           </p>
         </div>
-        <div class="col-6">
+        <div class="col col-6">
           <ul>
             <li>Tours</li>
             <li>Discounts</li>
