--- a/manchester.html
+++ b/manchester.html
@@ -17,196 +17,232 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar w/ text</a>
+    <!------------------------Navbar----------------------------->
+
+    <nav class="navbar navbar-expand-lg nav-hop">
+    <!------------------------Navbar-logo----------------------------->
+
+      <a href="index.html">
+        <div class="bar-hop-logo">
+          <div id="BarHop-logo">
+            <img
+              src="assets/images/Bar Hop UK (1).png"
+              class="logo bar-hop-logo"
+              alt="Bar-Hop-UK"
+            />
+          </div></div
+      ></a>
+
+      <a class="navbar-brand" href="#">Navbar</a>
       <button
         class="navbar-toggler"
         type="button"
         data-toggle="collapse"
-        data-target="#navbarText"
-        aria-controls="navbarText"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarText">
-        <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html"
+            <a class="nav-link" href="#"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="cities.html">Cities</a>
+            <a class="nav-link" href="#cities">Cities</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link" href="#newsletter">Newsletter</a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link disabled"
+              href="#newsletter"
+              tabindex="-1"
+              aria-disabled="true"
+              >Newsletter</a
+            >
           </li>
         </ul>
-        <span class="navbar-text">
-          Navbar text with an inline element
-        </span>
       </div>
     </nav>
 
-
     <div class="container-fluid manchester-container">
-    <div class="row">
-    <div class="col">
-      <div id="mapManchester"></div>
-      <div id="right-panel">
-        <div>
-          <b>Start:</b>
-          <select id="start">
-            <option
-              value="Unit 9 Piccadilly Trading Estate,
+      <div class="row">
+        <div class="col">
+          <div id="mapManchester"></div>
+          <div id="right-panel">
+            <div>
+              <b>Start:</b>
+              <select id="start">
+                <option
+                  value="Unit 9 Piccadilly Trading Estate,
 Manchester, M1 2NP"
-              >Cloud Water</option
-            >
-            <option
-              value="Track Brewing Co 
+                  >Cloud Water</option
+                >
+                <option
+                  value="Track Brewing Co 
 Unit 5 
 Sheffield Street 
 Manchester 
 M1 2ND "
-              >Track</option
-            >
-            <option
-              value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
-              >Pamona</option
-            >
+                  >Track</option
+                >
+                <option
+                  value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+                  >Pamona</option
+                >
 
-            <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
-              >Shindigger</option
-            >
-            <option value=" 66 N Western St, Manchester M12 6DD"
-              >Manchester Brewing</option
-            >
-            <option value="99 N Western St, Manchester M12 6JL"
-              >Alphabet Brewing</option
-            >
-            <option value="75 N Western St, Manchester M12 6DY"
-              >Beer Nouveau</option
-            >
-            <option value="Tonge St, Manchester M12 6LY"
-              >Squawk Brewing Company</option
-            >
-            <option value="69 N Western St, Manchester M12 6DX"
-              >Chorlton Brewing Company</option
-            >
-            <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
-              >Beatnikz Republic Brewing Co.
-            </option>
-            <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
-              >Joseph Holt Brewery</option
-            >
-          </select>
-          <br />
-          <b>Waypoints:</b> <br />
-          <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
-          <select multiple id="waypoints">
-            <option
-              value="Unit 9 Piccadilly Trading Estate,
+                <option
+                  value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+                  >Shindigger</option
+                >
+                <option value=" 66 N Western St, Manchester M12 6DD"
+                  >Manchester Brewing</option
+                >
+                <option value="99 N Western St, Manchester M12 6JL"
+                  >Alphabet Brewing</option
+                >
+                <option value="75 N Western St, Manchester M12 6DY"
+                  >Beer Nouveau</option
+                >
+                <option value="Tonge St, Manchester M12 6LY"
+                  >Squawk Brewing Company</option
+                >
+                <option value="69 N Western St, Manchester M12 6DX"
+                  >Chorlton Brewing Company</option
+                >
+                <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+                  >Beatnikz Republic Brewing Co.
+                </option>
+                <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+                  >Joseph Holt Brewery</option
+                >
+              </select>
+              <br />
+              <b>Waypoints:</b> <br />
+              <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
+              <select multiple id="waypoints">
+                <option
+                  value="Unit 9 Piccadilly Trading Estate,
 Manchester, M1 2NP"
-              >Cloud Water</option
-            >
-            <option
-              value="Track Brewing Co 
+                  >Cloud Water</option
+                >
+                <option
+                  value="Track Brewing Co 
 Unit 5 
 Sheffield Street 
 Manchester 
 M1 2ND "
-              >Track</option
-            >
-            <option
-              value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
-              >Pamona</option
-            >
+                  >Track</option
+                >
+                <option
+                  value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+                  >Pamona</option
+                >
 
-            <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
-              >Shindigger</option
-            >
-            <option value=" 66 N Western St, Manchester M12 6DD"
-              >Manchester Brewing</option
-            >
-            <option value="99 N Western St, Manchester M12 6JL"
-              >Alphabet Brewing</option
-            >
-            <option value="75 N Western St, Manchester M12 6DY"
-              >Beer Nouveau</option
-            >
-            <option value="Tonge St, Manchester M12 6LY"
-              >Squawk Brewing Company</option
-            >
-            <option value="69 N Western St, Manchester M12 6DX"
-              >Chorlton Brewing Company</option
-            >
-            <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
-              >Beatnikz Republic Brewing Co.
-            </option>
-            <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
-              >Joseph Holt Brewery</option
-            >
-          </select>
-          <br />
-          <b>End:</b>
-          <select id="end">
-            <option
-              value="Unit 9 Piccadilly Trading Estate,
+                <option
+                  value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+                  >Shindigger</option
+                >
+                <option value=" 66 N Western St, Manchester M12 6DD"
+                  >Manchester Brewing</option
+                >
+                <option value="99 N Western St, Manchester M12 6JL"
+                  >Alphabet Brewing</option
+                >
+                <option value="75 N Western St, Manchester M12 6DY"
+                  >Beer Nouveau</option
+                >
+                <option value="Tonge St, Manchester M12 6LY"
+                  >Squawk Brewing Company</option
+                >
+                <option value="69 N Western St, Manchester M12 6DX"
+                  >Chorlton Brewing Company</option
+                >
+                <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+                  >Beatnikz Republic Brewing Co.
+                </option>
+                <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+                  >Joseph Holt Brewery</option
+                >
+              </select>
+              <br />
+              <b>End:</b>
+              <select id="end">
+                <option
+                  value="Unit 9 Piccadilly Trading Estate,
 Manchester, M1 2NP"
-              >Cloud Water</option
-            >
-            <option
-              value="Track Brewing Co 
+                  >Cloud Water</option
+                >
+                <option
+                  value="Track Brewing Co 
 Unit 5 
 Sheffield Street 
 Manchester 
 M1 2ND "
-              >Track</option
-            >
-            <option
-              value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
-              >Pamona</option
-            >
+                  >Track</option
+                >
+                <option
+                  value="33 Waybridge Enterprise Centre, Daniel Adamson Rd, Salford M50 1DS"
+                  >Pamona</option
+                >
 
-            <option value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
-              >Shindigger</option
-            >
-            <option value=" 66 N Western St, Manchester M12 6DD"
-              >Manchester Brewing</option
-            >
-            <option value="99 N Western St, Manchester M12 6JL"
-              >Alphabet Brewing</option
-            >
-            <option value="75 N Western St, Manchester M12 6DY"
-              >Beer Nouveau</option
-            >
-            <option value="Tonge St, Manchester M12 6LY"
-              >Squawk Brewing Company</option
-            >
-            <option value="69 N Western St, Manchester M12 6DX"
-              >Chorlton Brewing Company</option
-            >
-            <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
-              >Beatnikz Republic Brewing Co.
-            </option>
-            <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
-              >Joseph Holt Brewery</option
-            >
-          </select>
-          <br />
-          <input type="submit" id="submit" />
+                <option
+                  value="Unit 11 Springfield Ln, Manchester, Salford M3 7JQ"
+                  >Shindigger</option
+                >
+                <option value=" 66 N Western St, Manchester M12 6DD"
+                  >Manchester Brewing</option
+                >
+                <option value="99 N Western St, Manchester M12 6JL"
+                  >Alphabet Brewing</option
+                >
+                <option value="75 N Western St, Manchester M12 6DY"
+                  >Beer Nouveau</option
+                >
+                <option value="Tonge St, Manchester M12 6LY"
+                  >Squawk Brewing Company</option
+                >
+                <option value="69 N Western St, Manchester M12 6DX"
+                  >Chorlton Brewing Company</option
+                >
+                <option value="15 Red Bank, Cheetham Hill, Manchester M4 4HF"
+                  >Beatnikz Republic Brewing Co.
+                </option>
+                <option value="Empire St, Cheetham Hill, Manchester M3 1JD"
+                  >Joseph Holt Brewery</option
+                >
+              </select>
+              <br />
+              <input type="submit" id="submit" />
+            </div>
+          </div>
+         
         </div>
       </div>
-      <div class="container directions-container">
-        <div id="directions-panel"></div>
+    </div>
+    <div class="container directions-container">
+      <div class="row">
+        <div class="col">
+          <h2 class="manchester-heading">Manchester</h2>
+          <p>
+            Using the brewery locater panel choose from the list of breweries
+            which you would like to visit. Choose brewery from which you would
+            like to start from a brewery yoy would like to finsh your journey on
+            and as many as you would like in between.
+          </p>
+        </div>
+        <div class="col">
+         <div id="directions-panel"></div>
+        </div>
       </div>
-     </div>
-         </div>
-     </div>
-      
-     <script
+    </div>
+    <script
       src="https://code.jquery.com/jquery-3.5.0.js"
       integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
       crossorigin="anonymous"
