--- a/manchester.html
+++ b/manchester.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-<link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
       type="text/css"
@@ -36,8 +36,6 @@
       crossorigin="anonymous"
     ></script>
 
-
- 
     <link rel="stylesheet" href="assets/css/style.css" />
     <script src="assets/js/manchester.js"></script>
 
@@ -46,23 +44,9 @@
   <body>
     <!------------------------Navbar----------------------------->
 
-    <nav class="navbar navbar-expand-lg nav-hop">
-    <!------------------------Navbar-logo----------------------------->
-
-      <a href="index.html">
-        <div class="bar-hop-logo">
-          <div id="BarHop-logo">
-            <img
-              src="assets/images/Bar Hop UK (1).png"
-              class="logo bar-hop-logo"
-              alt="Bar-Hop-UK"
-            />
-          </div></div
-      ></a>
-
-      <a class="navbar-brand" href="#">Navbar</a>
+   <nav class="navbar navbar-expand-md navbar-light bg-light">
       <button
-        class="navbar-toggler"
+        class="navbar-toggler ml-auto"
         type="button"
         data-toggle="collapse"
         data-target="#navbarNav"
@@ -70,9 +54,20 @@
         aria-expanded="false"
         aria-label="Toggle navigation"
       >
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler-icon"><i class="fas fa-beer"></i></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
+        <a href="index.html">
+          <div class="logo">
+            <div id="BarHop-logo">
+              <img
+                src="assets/images/Bar Hop UK (1).png"
+                class="logo bar-hop-logo"
+                alt="Bar-Hop-UK"
+              />
+            </div></div
+        ></a>
+
         <ul class="navbar-nav ml-auto nav-list">
           <li class="nav-item active">
             <a class="nav-link" href="#"
@@ -98,13 +93,28 @@
       </div>
     </nav>
 
+    <div class="container directions-container">
+      <div class="row">
+        <div class="col">
+          <h2 class="manchester-heading">Manchester</h2>
+          <p>
+            Using the brewery locater panel choose from the list of breweries
+            which you would like to visit. Choose brewery from which you would
+            like to start from a brewery yoy would like to finsh your journey on
+            and as many as you would like in between.
+          </p>
+        </div>
+      </div>
+    </div>
+
     <div class="container-fluid manchester-container">
       <div class="row">
         <div class="col">
           <div id="mapManchester"></div>
+
           <div id="right-panel">
             <div>
-              <b>Start:</b>
+              <b>Starting-Brewery:</b>
               <select id="start">
                 <option
                   value="Unit 9 Piccadilly Trading Estate,
@@ -151,7 +161,7 @@ M1 2ND "
                 >
               </select>
               <br />
-              <b>Waypoints:</b> <br />
+              <b>Waypoint-point breweries:</b> <br />
               <i>(Ctrl+Click or Cmd+Click for multiple selection)</i> <br />
               <select multiple id="waypoints">
                 <option
@@ -199,7 +209,7 @@ M1 2ND "
                 >
               </select>
               <br />
-              <b>End:</b>
+              <b>Finishing-brewery:</b>
               <select id="end">
                 <option
                   value="Unit 9 Piccadilly Trading Estate,
@@ -248,27 +258,16 @@ M1 2ND "
               <br />
               <input type="submit" id="submit" />
             </div>
+
+            <div id="directions-panel"></div>
           </div>
-         
+          <div class="overlay-image">
+            <div id="beer-pic"></div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container directions-container">
-      <div class="row">
-        <div class="col">
-          <h2 class="manchester-heading">Manchester</h2>
-          <p>
-            Using the brewery locater panel choose from the list of breweries
-            which you would like to visit. Choose brewery from which you would
-            like to start from a brewery yoy would like to finsh your journey on
-            and as many as you would like in between.
-          </p>
-        </div>
-        <div class="col">
-         <div id="directions-panel"></div>
-        </div>
-      </div>
-    </div>
+
     <script
       src="https://code.jquery.com/jquery-3.5.0.js"
       integrity="sha256-r/AaFHrszJtwpe+tHyNi/XCfMxYpbsRg2Uqn0x3s2zc="
